--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="navbar-main">
-        <a class="display-4" href="index.html">Los Cuatro Alamos</a>
+        <a class="display-4" href="../proyectocoder/index.html">Los Cuatro Alamos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
         </button>
